--- a/negocio/pom.xml
+++ b/negocio/pom.xml
@@ -10,16 +10,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>negocio</artifactId>
-    <name>Proyecto de Negocio</name>
-    <description>Proyecto que representa la lógica de negocio y el acceso a los datos</description>
+    <name>Proyecto de logica de negocio</name>
+    <description>Proyecto que representa la logica de negocio y los datos</description>
     <dependencies>
         <dependency>
             <groupId>co.edu.uniquindio</groupId>
             <artifactId>persistencia</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
     </dependencies>
-
-
 
 </project>
