--- a/persistencia/src/main/resources/application.properties
+++ b/persistencia/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/unishop?serverTimezone=UTC
 
 #Usuario y contraseña para tu base de datos descrita en la línea anterior
 spring.datasource.username=root
-spring.datasource.password=margarita
+spring.datasource.password=admin
 
 
 #[Opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
