--- a/web/pom.xml
+++ b/web/pom.xml
@@ -11,11 +11,13 @@
 
     <artifactId>web</artifactId>
     <name>Proyecto web</name>
-    <description>Proyecto que proporciona la interfaz gráfica de usuario web para los clientes</description>
+    <description>Proyecto que contiene la interfaz grafica de usuario (GUI) web para los clientes</description>
+
 
     <properties>
-        <joinfaces.version>4.4.3</joinfaces.version>
+        <joinfaces.version>4.6.0</joinfaces.version>
     </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -43,15 +45,16 @@
             <version>10.0.0</version>
         </dependency>
         <dependency>
-            <groupId>co.edu.uniquindio</groupId>
-            <artifactId>persistencia</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
         </dependency>
+        <dependency>
+            <groupId>co.edu.uniquindio</groupId>
+            <artifactId>persistencia</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>co.edu.uniquindio</groupId>
             <artifactId>negocio</artifactId>
