--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -28,4 +28,4 @@ spring.servlet.multipart.max-request-size=215MB
 #joinfaces.primefaces.theme=name
 joinfaces.primefaces.move-scripts-to-bottom=true
 
-upload.url = src/main/webapp/uploads
+upload.url =src/main/webapp/uploads
